# user-story-assistant

./: .coverage  .env.example  .gitignore  PRD.md  coverage.xml  pyproject.toml  pytest.ini  readme.md  requirements.txt  setup.py
.github/workflows/: tests.yml
backend/: .env.example  README.md  coverage.xml  pyproject.toml  pytest.ini  requirements.txt
backend/src/: main.py
backend/src/api/: models.py
backend/src/llm/: __init__.py  config.py  instance.py  models.py  service.py
backend/tests/: conftest.py
backend/tests/api/: test_finalize_story.py  test_finalize_story_endpoint.py  test_jira_integration_endpoint.py
backend/tests/mocks/: mock_llm.py
backend/tests/unit/: test_finalize_story.py  test_jira_integration.py  test_llm_service.py  test_propose_testing_strategy.py
frontend/: .gitignore  README.md  jest.config.js  package-lock.json  package.json
frontend/.nyc_output/processinfo/: 7330da9a-1bf8-414d-84aa-25bd80562f10.json  index.json
frontend/src/components/: ChatMessage.vue  HelloWorld.vue  RefinementFlow.vue  ReviewModal.vue  ToastNotification.vue  UserStoryForm.vue
frontend/src/store/: index.js
frontend/src/styles/: RefinementFlow.css
frontend/tests/unit/: ChatMessage.spec.js  RefinementFlow.spec.js  ReviewModal.spec.js  store.spec.js
src/: dependencies.py  main.py
src/api/routes/: identify_corner_cases.py  (+2 more)
src/config/: llm_config.py
src/llm/: __init__.py  config.py  manager.py  models.py  service.py
src/ui/: .gitignore  __init__.py  app.py  jest.config.js  jest.setup.js  package-lock.json  package.json  vue.config.js
tests/: conftest.py  test_main.py
tests/api/: test_identify_corner_cases_endpoint.py  test_propose_testing_strategy_endpoint.py  test_refine_story_endpoint.py  test_refinement.py
tests/mocks/: mock_llm.py
tests/unit/: conftest.py  test_identify_corner_cases.py  test_llm_service.py  test_propose_testing_strategy.py  test_refine_story.py  test_service.py
(+24 files in other folders)
