[tool.poetry]
name = "user-story-assistant"
version = "0.1.0"
description = "Asistente de refinamiento de historias de usuario usando LLM"
authors = ["Raúl García de Marina Maroto"]
packages = [
    { include = "src" },
    { include = "tests", format = "sdist" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langchain = "^0.3.6"
langchain-core = "^0.3.15"
fastapi = "^0.115.4"
pydantic = "^2.9.2"
python-dotenv = "^1.0.0"
torch = "^2.1.0"
transformers = "^4.36.0"
atlassian-python-api = "^3.41.0"
langchain-ollama = "^0.2.0"
pydantic-settings = "^2.6.1"
starlette = "^0.41.2"
uvicorn = "^0.32.0"
langchain-community = "^0.3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
pytest-asyncio = "^0.21.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --import-mode=importlib"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
